# pspcz_analyzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  integration.yml  release.yml
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md
data-model/: index.html
docs/: data-model.md  index.md  routes.md  services.md  templates.md  testing.md
pspcz_analyzer/: config.py  logging_config.py  main.py  main_backend.py  main_frontend.py  middleware.py  rate_limit.py
pspcz_analyzer/admin/: __init__.py  auth.py  log_stream.py  pipeline_history.py  routes.py
pspcz_analyzer/admin/templates/: admin_base.html  config.html  dashboard.html  login.html  pipelines.html
pspcz_analyzer/cli/: fetch_tisky.py
pspcz_analyzer/data/: cache.py  downloader.py  history_scraper.py  law_changes_scraper.py  parser.py  steno_scraper.py  tisk_downloader.py  tisk_extractor.py  tisk_scraper.py
pspcz_analyzer/i18n/: __init__.py  middleware.py  translations.py
pspcz_analyzer/models/: amendment_models.py  enums.py  pipeline_progress.py  schemas.py  tisk_models.py
pspcz_analyzer/routes/: amendments.py  api.py  charts.py  feedback.py  health.py  laws.py  pages.py  tisk.py  utils.py  voting.py
pspcz_analyzer/services/: activity_service.py  amendment_service.py  analysis_cache.py  attendance_service.py  daily_refresh_service.py  data_reader.py  data_service.py  feedback_service.py  law_service.py  llm_service.py  loyalty_service.py  mp_builder.py  ollama_service.py  pipeline_lock.py  runtime_config.py  similarity_service.py  tisk_cache_manager.py  tisk_classifier.py  tisk_downloader_pipeline.py  tisk_lookup_builder.py  tisk_pipeline_service.py  tisk_text_service.py  tisk_version_service.py  topic_service.py  votes_service.py
pspcz_analyzer/services/llm/: __init__.py  (+4 more)
pspcz_analyzer/static/: style.css
pspcz_analyzer/templates/: active.html  amendment_detail.html  amendments.html  attendance.html  base.html  index.html  law_detail.html  laws.html  loyalty.html  similarity.html  vote_detail.html  votes.html
pspcz_analyzer/utils/: text.py
reference/SUMMARY/: index.html
reference/pspcz_analyzer/: index.html
routes/: index.html
scripts/: clear_cache.sh  gen_ref_pages.py  test_amendments.py  test_vllm.py
search/: search_index.json
services/: index.html
templates/: index.html
testing/: index.html
tests/: conftest.py
tests/api/: test_api_endpoints.py  test_charts.py  test_feedback.py  test_pages.py  test_security_endpoints.py
tests/fixtures/: sample_data.py
tests/integration/: conftest.py  test_download.py  test_parsing.py  test_pipeline.py
tests/unit/: test_cache.py  test_parser.py  test_security.py
(+153 files in other folders)
