[project]
name = "pspcz-analyzer"
version = "0.1.0"
description = "Czech Parliamentary Voting Analyzer — OSINT tool for psp.cz open data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "python-multipart",
    "polars>=1.0",
    "httpx>=0.27",
    "seaborn>=0.13",
    "matplotlib>=3.9",
    "loguru>=0.7.3",
    "beautifulsoup4>=4.12",
    "pymupdf>=1.25",
    "markdown>=3.10.2",
    "slowapi>=0.1.9",
    "python-dotenv>=1.2.1",
    "nh3>=0.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.27",
    "ruff>=0.11",
    "pre-commit>=4.0",
    "pyright>=1.1",
    "bump-my-version>=1.1",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # FastAPI Depends() pattern
    "SIM102", # nested if guards (readability preference)
    "SIM108", # ternary vs if/else (readability preference)
    "SIM117", # nested with statements (needed for streaming + error handling)
    "C408",   # dict() vs literal (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit real psp.cz (deselect with '-m not integration')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["pspcz_analyzer"]
omit = ["pspcz_analyzer/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0

[tool.bumpversion]
current_version = "0.1.0"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
